calc/y.output

state 0
	$accept: .list $end 
	list: .    (1)

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 10
	'?'  shift 7
	'('  shift 8
	.  reduce 1 (src line 75)

	variable  goto 5
	expr  goto 4
	number  goto 11
	exprArray  goto 6
	array  goto 13
	array2  goto 15
	unittest  goto 3
	list  goto 1
	stat  goto 2

state 1
	$accept:  list.$end 

	$end  accept
	.  error


state 2
	list:  stat.'\n' 

	'\n'  shift 16
	.  error


state 3
	list:  unittest.    (3)

	.  reduce 3 (src line 78)


state 4
	stat:  expr.    (7)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 23
	'&'  shift 22
	'+'  shift 17
	'-'  shift 18
	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 7 (src line 108)


state 5
	stat:  variable.'=' expr 
	stat:  variable.'=' exprArray 
	stat:  variable.'=' twoDarray 
	stat:  variable.'=' threeDarray 
	expr:  variable.    (26)
	variable:  variable.LETTER 

	LETTER  shift 25
	'='  shift 24
	.  reduce 26 (src line 166)


state 6
	stat:  exprArray.    (9)
	exprArray:  exprArray.'+' '[' variable ']' 
	exprArray:  exprArray.'+' array 

	'+'  shift 26
	.  reduce 9 (src line 113)


state 7
	unittest:  '?'.array2 '\n' 
	unittest:  '?'.number '\n' 
	unittest:  '?'.variable '\n' 

	DIGIT  shift 14
	LETTER  shift 12
	'['  shift 30
	.  error

	variable  goto 29
	number  goto 28
	array2  goto 27

state 8
	expr:  '('.expr ')' 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 31
	number  goto 11

state 9
	expr:  '-'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 34
	number  goto 11

state 10
	exprArray:  '['.variable ']' 
	expr:  '['.'[' variable ']' ']' 
	expr:  '['.'[' '[' variable ']' ']' ']' 
	array2:  '['.number 

	DIGIT  shift 14
	LETTER  shift 12
	'['  shift 36
	.  error

	variable  goto 35
	number  goto 37

state 11
	expr:  number.    (29)
	number:  number.DIGIT 

	DIGIT  shift 38
	.  reduce 29 (src line 172)


state 12
	variable:  LETTER.    (41)

	.  reduce 41 (src line 236)


state 13
	exprArray:  array.    (14)

	.  reduce 14 (src line 130)


state 14
	number:  DIGIT.    (39)

	.  reduce 39 (src line 215)


state 15
	array2:  array2.',' number 
	array:  array2.']' 

	']'  shift 40
	','  shift 39
	.  error


state 16
	list:  stat '\n'.    (2)

	.  reduce 2 (src line 76)


state 17
	expr:  expr '+'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 41
	number  goto 11

state 18
	expr:  expr '-'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 42
	number  goto 11

state 19
	expr:  expr '*'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 43
	number  goto 11

state 20
	expr:  expr '/'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 44
	number  goto 11

state 21
	expr:  expr '%'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 45
	number  goto 11

state 22
	expr:  expr '&'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 46
	number  goto 11

state 23
	expr:  expr '|'.expr 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 33
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 47
	number  goto 11

state 24
	stat:  variable '='.expr 
	stat:  variable '='.exprArray 
	stat:  variable '='.twoDarray 
	stat:  variable '='.threeDarray 

	DIGIT  shift 14
	LETTER  shift 12
	'-'  shift 9
	'['  shift 52
	'('  shift 8
	.  error

	variable  goto 32
	expr  goto 48
	number  goto 11
	exprArray  goto 49
	array  goto 13
	array2  goto 15
	twoDarray  goto 50
	twoDarray2  goto 53
	threeDarray  goto 51
	threeDarray2  goto 54

state 25
	variable:  variable LETTER.    (42)

	.  reduce 42 (src line 241)


state 26
	exprArray:  exprArray '+'.'[' variable ']' 
	exprArray:  exprArray '+'.array 

	'['  shift 55
	.  error

	array  goto 56
	array2  goto 15

state 27
	unittest:  '?' array2.'\n' 
	array2:  array2.',' number 

	'\n'  shift 57
	','  shift 39
	.  error


state 28
	unittest:  '?' number.'\n' 
	number:  number.DIGIT 

	DIGIT  shift 38
	'\n'  shift 58
	.  error


state 29
	unittest:  '?' variable.'\n' 
	variable:  variable.LETTER 

	LETTER  shift 25
	'\n'  shift 59
	.  error


state 30
	array2:  '['.number 

	DIGIT  shift 14
	.  error

	number  goto 37

state 31
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 23
	'&'  shift 22
	'+'  shift 17
	'-'  shift 18
	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	')'  shift 60
	.  error


state 32
	expr:  variable.    (26)
	variable:  variable.LETTER 

	LETTER  shift 25
	.  reduce 26 (src line 166)


state 33
	expr:  '['.'[' variable ']' ']' 
	expr:  '['.'[' '[' variable ']' ']' ']' 

	'['  shift 36
	.  error


state 34
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  '-' expr.    (25)

	.  reduce 25 (src line 164)


state 35
	exprArray:  '[' variable.']' 
	variable:  variable.LETTER 

	LETTER  shift 25
	']'  shift 61
	.  error


state 36
	expr:  '[' '['.variable ']' ']' 
	expr:  '[' '['.'[' variable ']' ']' ']' 

	LETTER  shift 12
	'['  shift 63
	.  error

	variable  goto 62

state 37
	array2:  '[' number.    (36)
	number:  number.DIGIT 

	DIGIT  shift 38
	.  reduce 36 (src line 196)


state 38
	number:  number DIGIT.    (40)

	.  reduce 40 (src line 225)


state 39
	array2:  array2 ','.number 

	DIGIT  shift 14
	.  error

	number  goto 64

state 40
	array:  array2 ']'.    (38)

	.  reduce 38 (src line 206)


state 41
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (18)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 18 (src line 150)


state 42
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (19)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 19 (src line 152)


state 43
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (20)
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 20 (src line 154)


state 44
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (21)
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 21 (src line 156)


state 45
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (22)
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 22 (src line 158)


state 46
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr '&' expr.    (23)
	expr:  expr.'|' expr 

	'+'  shift 17
	'-'  shift 18
	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 23 (src line 160)


state 47
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr '|' expr.    (24)

	'&'  shift 22
	'+'  shift 17
	'-'  shift 18
	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 24 (src line 162)


state 48
	stat:  variable '=' expr.    (8)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 23
	'&'  shift 22
	'+'  shift 17
	'-'  shift 18
	'*'  shift 19
	'/'  shift 20
	'%'  shift 21
	.  reduce 8 (src line 109)


state 49
	stat:  variable '=' exprArray.    (10)
	exprArray:  exprArray.'+' '[' variable ']' 
	exprArray:  exprArray.'+' array 

	'+'  shift 26
	.  reduce 10 (src line 114)


state 50
	stat:  variable '=' twoDarray.    (11)

	.  reduce 11 (src line 118)


state 51
	stat:  variable '=' threeDarray.    (12)

	.  reduce 12 (src line 122)


state 52
	exprArray:  '['.variable ']' 
	expr:  '['.'[' variable ']' ']' 
	expr:  '['.'[' '[' variable ']' ']' ']' 
	threeDarray2:  '['.twoDarray 
	twoDarray2:  '['.array 
	array2:  '['.number 

	DIGIT  shift 14
	LETTER  shift 12
	'['  shift 65
	.  error

	variable  goto 35
	number  goto 37
	array  goto 67
	array2  goto 15
	twoDarray  goto 66
	twoDarray2  goto 53

state 53
	twoDarray2:  twoDarray2.',' array 
	twoDarray:  twoDarray2.']' 

	']'  shift 69
	','  shift 68
	.  error


state 54
	threeDarray2:  threeDarray2.',' twoDarray 
	threeDarray:  threeDarray2.']' 

	']'  shift 71
	','  shift 70
	.  error


state 55
	exprArray:  exprArray '+' '['.variable ']' 
	array2:  '['.number 

	DIGIT  shift 14
	LETTER  shift 12
	.  error

	variable  goto 72
	number  goto 37

state 56
	exprArray:  exprArray '+' array.    (16)

	.  reduce 16 (src line 139)


state 57
	unittest:  '?' array2 '\n'.    (4)

	.  reduce 4 (src line 84)


state 58
	unittest:  '?' number '\n'.    (5)

	.  reduce 5 (src line 90)


state 59
	unittest:  '?' variable '\n'.    (6)

	.  reduce 6 (src line 95)


state 60
	expr:  '(' expr ')'.    (17)

	.  reduce 17 (src line 148)


state 61
	exprArray:  '[' variable ']'.    (13)

	.  reduce 13 (src line 128)


state 62
	expr:  '[' '[' variable.']' ']' 
	variable:  variable.LETTER 

	LETTER  shift 25
	']'  shift 73
	.  error


state 63
	expr:  '[' '[' '['.variable ']' ']' ']' 

	LETTER  shift 12
	.  error

	variable  goto 74

state 64
	array2:  array2 ',' number.    (37)
	number:  number.DIGIT 

	DIGIT  shift 38
	.  reduce 37 (src line 201)


state 65
	expr:  '[' '['.variable ']' ']' 
	expr:  '[' '['.'[' variable ']' ']' ']' 
	twoDarray2:  '['.array 
	array2:  '['.number 

	DIGIT  shift 14
	LETTER  shift 12
	'['  shift 75
	.  error

	variable  goto 62
	number  goto 37
	array  goto 67
	array2  goto 15

state 66
	threeDarray2:  '[' twoDarray.    (30)

	.  reduce 30 (src line 176)


state 67
	twoDarray2:  '[' array.    (33)

	.  reduce 33 (src line 186)


state 68
	twoDarray2:  twoDarray2 ','.array 

	'['  shift 30
	.  error

	array  goto 76
	array2  goto 15

state 69
	twoDarray:  twoDarray2 ']'.    (35)

	.  reduce 35 (src line 191)


state 70
	threeDarray2:  threeDarray2 ','.twoDarray 

	'['  shift 78
	.  error

	twoDarray  goto 77
	twoDarray2  goto 53

state 71
	threeDarray:  threeDarray2 ']'.    (32)

	.  reduce 32 (src line 181)


state 72
	exprArray:  exprArray '+' '[' variable.']' 
	variable:  variable.LETTER 

	LETTER  shift 25
	']'  shift 79
	.  error


state 73
	expr:  '[' '[' variable ']'.']' 

	']'  shift 80
	.  error


state 74
	expr:  '[' '[' '[' variable.']' ']' ']' 
	variable:  variable.LETTER 

	LETTER  shift 25
	']'  shift 81
	.  error


state 75
	expr:  '[' '[' '['.variable ']' ']' ']' 
	array2:  '['.number 

	DIGIT  shift 14
	LETTER  shift 12
	.  error

	variable  goto 74
	number  goto 37

state 76
	twoDarray2:  twoDarray2 ',' array.    (34)

	.  reduce 34 (src line 188)


state 77
	threeDarray2:  threeDarray2 ',' twoDarray.    (31)

	.  reduce 31 (src line 178)


state 78
	twoDarray2:  '['.array 

	'['  shift 30
	.  error

	array  goto 67
	array2  goto 15

state 79
	exprArray:  exprArray '+' '[' variable ']'.    (15)

	.  reduce 15 (src line 132)


state 80
	expr:  '[' '[' variable ']' ']'.    (27)

	.  reduce 27 (src line 168)


state 81
	expr:  '[' '[' '[' variable ']'.']' ']' 

	']'  shift 82
	.  error


state 82
	expr:  '[' '[' '[' variable ']' ']'.']' 

	']'  shift 83
	.  error


state 83
	expr:  '[' '[' '[' variable ']' ']' ']'.    (28)

	.  reduce 28 (src line 170)


21 terminals, 14 nonterminals
43 grammar rules, 84/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 74/240000
21 extra closures
153 shift entries, 1 exceptions
48 goto entries
29 entries saved by goto default
Optimizer space used: output 144/240000
144 table entries, 0 zero
maximum spread: 21, maximum offset: 75
